syntax = "proto3";
import "User.proto";

option java_package = "tech.ordinaryroad.live.chat.client.douyin.protobuf.dto";

message Common {
  string method = 1;
  uint64 msgId = 2;
  uint64 roomId = 3;
  uint64 createTime = 4;
  uint32 monitor = 5;
  bool isShowMsg = 6;
  string describe = 7;
  // DisplayText displayText = 8;
  uint64 foldType = 9;
  uint64 anchorFoldType = 10;
  uint64 priorityScore = 11;
  string logId = 12;
  string msgProcessFilterK = 13;
  string msgProcessFilterV = 14;
  User user = 15;
  // Room room = 16;
  uint64 anchorFoldTypeV2 = 17;
  uint64 processAtSeiTimeMs = 18;
  uint64 randomDispatchMs = 19;
  bool isDispatch = 20;
  uint32 channelId = 21;
  uint64 diffSei2absSecond = 22;
  uint64 anchorFoldDuration = 23;
}